# diamondhands

./: .dockerignore  .env.prod.example  .gitignore  LICENSE  README.md  compose.prod.yml  docker-compose.yml
ingester/: .env.example  Dockerfile  PROJECTION_MODEL.md  README.md  main.py  pyproject.toml
ingester/agent_eval/: __init__.py  agent_client.py  compare.py  faithfulness.py  judge.py  outcome.py  replay.py  runner.py  score_recs.py  trajectory.py
ingester/agent_eval/cassettes/: README.md  best-ev-today.json  model-accuracy-30d.json
ingester/agent_eval/golden/: adversarial_exact_number.json  adversarial_no_data.json  best_ev.json  debate_and_save.json  model_accuracy.json  player_form.json
ingester/ingester/: db.py  fangraphs_api.py  metrics.py  mlb_api.py  odds_api.py  runlog.py  statcast.py  statcast_pitch.py  weather.py
ingester/ingester/commands/: accuracy.py  backfill_batter_lines.py  backfill_birthdates.py  backfill_games.py  backfill_pitcher_starts.py  backfill_stats.py  backfill_weather.py  backtest.py  blend_priors.py  briefing.py  daily.py  daily_slate.py  fit_calibration.py  ingest_steamer.py  lineups.py  live.py  load_static.py  odds.py  pick_analysis.py  picks.py  pitch_aggregations.py  refresh_bat_tracking.py  refresh_batted_ball.py  refresh_batted_ball_events.py  refresh_batter_xhr.py  refresh_bullpen.py  refresh_pitcher_priors.py  refresh_priors.py  refresh_projections.py  refresh_skills.py  refresh_team_defense.py  refresh_umpires.py  refresh_weather.py  report.py  scores.py  simulate_eval.py  skill_snapshots.py  smoke.py  tennis_backfill.py  tennis_backfill_attributes.py  (+14 more)
ingester/ingester/fixtures/: odds_game_sample.json  odds_props_sample.json  steamer_sample.csv  tennis_events_sample.json  tennis_h2h_sample.json
ingester/ingester/ml/: __init__.py  cv.py  dataset.py  features.py  infer.py  perpa.py  simulate.py  train.py
ingester/ingester/projection/: batter_model.py  calibration.py  clear_rates.py  constants.py  game_sim.py  matchup.py  mle.py  opener.py  park_adj.py  pitcher_adj.py  pitcher_prior.py  playing_time.py  prior.py  prop_blend.py  runner.py  sgp.py  weather_adj.py  workload.py
ingester/ingester/tennis/: __init__.py  adjustments.py  calibration.py  constants.py  data.py  elo.py  games_calibration.py  match_model.py  match_sim.py  oddsfeed.py  props.py  ratings.py  (+2 more)
ingester/tests/: test_agent_eval.py  test_backtest_metrics.py  test_bat_tracking.py  test_batted_ball.py  test_batted_ball_events.py  test_batter_lines.py  test_batter_model.py  test_blend_priors.py  test_boxscore_lineups.py  test_bullpen.py  test_calibration.py  test_chase_aggregation.py  test_clear_rates.py  test_daily_slate.py  test_daily_workflow.py  test_fangraphs_api.py  test_game_sim.py  test_game_status.py  test_hit_deluck.py  test_hr_distance.py  test_ingest_steamer.py  test_lineup_pa.py  test_live_linescore.py  test_matchup.py  test_matchup_chase.py  test_ml_cv.py  test_ml_features.py  test_mle.py  test_nrfi.py  test_odds.py  test_opener.py  test_park_adj.py  test_pick_analysis.py  test_picks.py  test_pitcher_barrel_allowed.py  test_pitcher_batted_ball.py  test_pitcher_fallback.py  test_pitcher_line.py  test_pitcher_prior.py  test_pitcher_whiff_k.py  (+21 more)
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/diamond_mcp/: __init__.py  app.py  auth.py  breaker.py  client.py  config.py  metrics.py  ratelimit.py  server.py  telemetry.py
mcp-server/loadtest/: driver.py
mcp-server/tests/: conftest.py  test_middleware.py  test_observability.py  test_resilience.py  test_tools.py
(+441 files in other folders)
