[project]
name = "ingester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.7.0",
    "google-genai>=1.0.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "pybaseball>=2.2.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingester"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# Mirrors mcp-server/pyproject.toml so the two Python packages share one lint standard.
[tool.ruff]
line-length = 100
