[project]
name = "diamond-mcp"
version = "0.1.0"
description = "MCP server exposing Diamond's MLB/tennis projection, odds, and accuracy data to Claude Desktop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.16.0",
]

[project.scripts]
diamond-mcp = "diamond_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diamond_mcp"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
